# jerabek-bc-v4

./: .gitignore  CMakeLists.txt  package.xml
config/: params.yaml
launch/: flight.launch.py
scripts/: mouse_camera.py
src/: drone_interface.cpp  drone_interface.hpp  flight_node.cpp  flight_node.hpp  main.cpp  mission_manager.cpp  mission_manager.hpp
